# marmalade

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
include/: README.md
include/archetypes/: camera.h  entity.h
include/graphics/: framebuffer.h  multisampledframebuffer.h  renderable.h  shader.h  texture.h
include/io/: input.h  inputmanager.h
include/scene/: scene.h  scenemanager.h
plugins/: README.md
res/config/: imgui.ini  style.txt
res/shaders/: shader.frag  shader.vert
src/: main.cpp
src/application/: application.cpp  application.h  config.cpp  config.h  guilogsink.cpp  guilogsink.h  profiler.cpp  profiler.h  project.cpp  project.h
src/archetypes/: camera.cpp  entity.cpp
src/graphics/: framebuffer.cpp  multisampledframebuffer.cpp  renderable.cpp  shader.cpp  texture.cpp
src/gui/: editorviews.h  editview.cpp  editview.h  framebuffer.cpp  framebuffer.h  gameview.cpp  gameview.h  stylemanager.cpp  stylemanager.h  window.h
src/gui/imgui/: editor.cpp  editor.h  editorviews.cpp  editorviews.h  editorviewstatusbar.cpp  editorviewstatusbar.h  log.cpp  log.h  packagemanager.cpp  packagemanager.h  projectwizard.cpp  projectwizard.h  sceneheirarchy.cpp  sceneheirarchy.h  scenehierarchy.cpp  scenehierarchy.h  settings.cpp  settings.h  topbar.cpp  topbar.h
src/io/: input.cpp  inputmanager.cpp
src/scene/: scene.cpp  scenemanager.cpp
